--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,47 +1,66 @@
 @import "_colors.scss";
-body {
-    color: $red;
+
+body html{
+    height: 100%;
+    color: $black;
 }
 
-header {
-    text-align: center;
-    height: 50vh;
-    background: rgba(255, 255, 243, 0.6);
-    background: url(images/chips.jpg) bottom center no-repeat;
+.hero-image{
+    background-image: url(images/chips.jpg);
+    height: 50%;
+    background-position: center;
     background-size: cover;
-    opacity: 0.7;
-    align-items: center;
-    justify-content: center;
+    background-repeat: no-repeat;
 }
 
-h1 {
-    font-size: 135px;
-    color: $red;
-    font-weight: bolder;
+.hero-text{
+    text-align: center;
+    position: relative;
+    top: 50%;
+    color: $black;
 }
 
-nav ul {
+.hero-text h1{
+    font-size: 75px;
+}
+
+.hero-text p {
+    font-size: 25px;
+}
+
+.nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
     display: flex;
 }
 
-nav {
-    background: $white;
+.nav {
+    background: $red;
     top: 0;
     width: 100%;
     height: 30px;
+    padding: 14px 16px;
     position: relative;
     z-index: 1;
 }
 
-nav li {
+.nav li {
     flex: 1;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.nav a {
+    text-decoration: none;
+    font-size: 25px;
+}
+
+.nav a:hover{
+    color: $red;
+    text-decoration: none;
 }
 
 .fixed-nav nav{
