navbar spacing, minor styling

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,5 +1,12 @@
+//colors
 $blue: #30A9DE;
 $yelow: #EFDC05;
 $red: #E53A40;
 $black: #090707;
 $white: #FFFFF3;
+
+//box shadow
+$box-shadow: 0 4px rgba(0, 0, 0, 0.1);
+
+//border radius
+$border-radius: 5px;
