--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,6 @@
 @import "_colors.scss";
+@import "_fonts.scss";
+
 body html {
     height: 100%;
     color: $black;
@@ -25,6 +27,8 @@ body html {
 .hero-text h1 {
     font-size: 85px;
     font-weight: bold;
+    font-family: $header-font;
+    text-shadow: 0 2px $white;
 }
 
 .hero-text p {
