--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,5 @@
 @import "_colors.scss";
 @import "_fonts.scss";
-
 body html {
     height: 100%;
     color: $black;
@@ -8,11 +7,10 @@ body html {
     padding: 0;
 }
 
-.title{
+.title {
     font-size: 85px;
     font-weight: bold;
     font-family: $header-font;
-    text-shadow: 0 2px $white;
     color: $red;
     text-align: center;
     text-shadow: 0 2px $black;
@@ -79,7 +77,7 @@ nav a {
     text-transform: uppercase;
 }
 
-nav a .icons{
+nav a .icons {
     display: inline-block;
     font-weight: 700;
     font-size: 20px;
@@ -93,6 +91,30 @@ nav a:hover {
 .fixed-nav nav {
     position: fixed;
     box-shadow: $box-shadow;
+}
+
+li.logo {
+    max-width: 0;
+    overflow: hidden;
+    background: $white;
+    transition: all .5s;
+    font-size: 25px;
+}
+
+.fixed-nav li.logo {
+    max-width: 500px;
+    margin-left: 6px;
+}
+
+li.logo a {
+    color: $red;
+    font-family: $header-font;
+    text-shadow: 0 1px $black;
+}
+
+nav .logo a:hover{
+    color: $blue;
+    text-shadow: 0 1px $red;
 }
 
 .blue-area {
