--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 $header-font: 'Bowlby One SC', cursive;
+$body-font: 'Roboto', sans-serif;
