--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,7 @@ body html {
     color: $black;
     margin: 0;
     padding: 0;
+    font-family: $body-font;
 }
 
 .title {
@@ -12,8 +13,15 @@ body html {
     font-weight: bold;
     font-family: $header-font;
     color: $red;
+    padding: 15px;
     text-align: center;
     text-shadow: 0 2px $black;
+}
+
+.line{
+    width: 100%;
+    background-color: $blue;
+    padding: 5px;
 }
 
 .hero-image {
@@ -29,7 +37,8 @@ body html {
 .hero-text {
     text-align: center;
     position: relative;
-    top: 50%;
+    top: 25%;
+    bottom: 25%;
     color: $red;
     text-shadow: 0 1.25px $black;
 }
@@ -121,6 +130,8 @@ nav .logo a:hover{
     background-color: $blue;
     padding-top: 50px;
     border-radius: $border-radius;
+    padding-bottom: 35px;
+    margin-bottom: 75px;
 }
 
 #txt-area {
@@ -139,4 +150,8 @@ p {
 
 footer {
     background: $white;
+    padding: 35px 35px;
+    background-color: $blue;
+    color: $white;
+    font-size: 20px;
 }
