--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -4,6 +4,7 @@ $yelow: #EFDC05;
 $red: #E53A40;
 $black: #090707;
 $white: #FFFFF3;
+$grey: #e6e4e5;
 
 //box shadow
 $box-shadow: 0 4px rgba(0, 0, 0, 0.1);
