--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Irish+Grover');
+
 
 $header-font: 'Bowlby One SC', cursive;
+$header-font2: 'Irish Grover', cursive;
 $body-font: 'Roboto', sans-serif;
