--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,11 +12,11 @@ body html {
 .title {
     font-size: 85px;
     font-weight: bold;
-    font-family: $header-font;
+    font-family: $header-font2;
     color: $red;
     padding: 15px;
     text-align: center;
-    text-shadow: 0 2px $black;
+    text-shadow: 0 2px $grey;
 }
 
 .hero{
@@ -49,6 +49,14 @@ body html {
     text-shadow: 0 1.25px $black;
 }
 
+.hero-text p {
+    font-size: 45px;
+    font-weight: normal;
+    margin: auto;
+    font-family: $header-font2;
+}
+
+/* Hero font fade in */
 .hero-text p{
     animation: fadein 1s linear;
     animation-fill-mode: both;
@@ -71,12 +79,6 @@ body html {
     }
 }
 
-.hero-text p {
-    font-size: 45px;
-    font-weight: normal;
-    margin: auto;
-    font-family: $header-font;
-}
 
 nav {
     background: $white;
@@ -134,7 +136,7 @@ li.logo {
     max-width: 0;
     overflow: hidden;
     background: $white;
-    transition: all .5s;
+    transition: all 1s;
     font-size: 25px;
 }
 
@@ -145,8 +147,8 @@ li.logo {
 
 li.logo a {
     color: $red;
-    font-family: $header-font;
-    text-shadow: 0 1px $black;
+    font-family: $header-font2;
+    text-shadow: 0 1px $grey;
 }
 
 nav .logo a:hover{
