--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -183,6 +183,45 @@ p {
 /***********
 Secret Modal
 ************/
+//The modal
+#modal{
+    //display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+//The modal content
+.modal-content{
+    background-color: $white;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid $white;
+    width: 80%;
+    box-shadow: $box-shadow;
+}
+
+.close{
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover{
+    .close:focus{
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+}
 
 footer {
     background: $white;
