added new images and styling

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -3,7 +3,7 @@ $blue: #2b90d9;
 $yelow: #EFDC05;
 $red: #E53A40;
 $black: #090707;
-$white: #FFFFF3;
+$white: #FFFFFF;
 $grey: #e6e4e5;
 $flatBlack: #333030;
 
