--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,7 +30,7 @@ body html {
 .hero-image {
     background-image: url(images/chips.jpg);
     height: 250px;
-    width: 95%;
+    width: 99%;
     margin: auto;
     border-radius: $border-radius;
     background-color: $blue;
@@ -180,6 +180,11 @@ p {
     padding: 3px;
 }
 
+.chip-aisle{
+    width: 100% \9;
+    height: auto;
+}
+
 /***********
 Secret Modal
 ************/
@@ -216,6 +221,7 @@ Secret Modal
     margin: auto;
     color: $white;
     font-family: $header-font2;
+    text-shadow: 1.75px 1.5px $red;
 }
 
 //Close btn
@@ -229,7 +235,7 @@ Secret Modal
 //Close btn (hoover, focus)
 .close:hover{
     .close:focus{
-        color: $black;
+        color: $red;
         text-decoration: none;
         cursor: pointer;
     }
