--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Irish+Grover');
-
+@import url('https://fonts.googleapis.com/css?family=Righteous');
 
 $header-font: 'Bowlby One SC', cursive;
-$header-font2: 'Irish Grover', cursive;
+$header-font2: 'Righteous', cursive;
 $body-font: 'Roboto', sans-serif;
