changed some colors

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,11 +1,11 @@
 //colors
-$blue: #2b90d9;
-$yelow: #EFDC05;
-$red: #E53A40;
-$black: #090707;
-$white: #FFFFFF;
-$grey: #e6e4e5;
-$flatBlack: #333030;
+$blue: #3772FF;
+$yelow: #FDCA40;
+$red: #DF2935;
+$black: #080708;
+$white: #FFF;
+$grey: #808080;
+$flatBlack: #1D1E18;
 
 //box shadow
 $box-shadow: 0 4px rgba(0, 0, 0, 0.1);
