--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Righteous');
+@import url('https://fonts.googleapis.com/css?family=Corben');
 
-$header-font: 'Bowlby One SC', cursive;
-$header-font2: 'Righteous', cursive;
+$header-font: 'Corben', cursive;
 $body-font: 'Roboto', sans-serif;
