--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,7 +12,8 @@ body html {
 .title {
     font-size: 85px;
     font-weight: bold;
-    font-family: $header-font2;
+    margin: auto;
+    font-family: $header-font;
     color: $red;
     padding: 15px;
     text-align: center;
@@ -42,14 +43,14 @@ body html {
     top: 25%;
     bottom: 25%;
     color: $red;
-    text-shadow: 0 1.25px $black;
+    text-shadow: 0 1.25px $grey;
 }
 
 .hero-text p {
-    font-size: 45px;
+    font-size: 65px;
     font-weight: normal;
     margin: auto;
-    font-family: $header-font2;
+    font-family: $header-font;
 }
 
 /*****************
@@ -79,7 +80,7 @@ Hero font fade in
 
 
 nav {
-    background: $white;
+    background: white;
     top: 0;
     width: 100%;
     margin: 0 auto;
@@ -133,7 +134,7 @@ nav a:hover {
 li.logo {
     max-width: 0;
     overflow: hidden;
-    background: $white;
+    background: white;
     transition: all 1s;
     font-size: 25px;
 }
@@ -145,7 +146,7 @@ li.logo {
 
 li.logo a {
     color: $red;
-    font-family: $header-font2;
+    font-family: $header-font;
     text-shadow: 0 1px $grey;
 }
 
@@ -216,7 +217,7 @@ Secret Modal
     font-size: 100px;
     margin: auto;
     color: $white;
-    font-family: $header-font2;
+    font-family: $header-font;
     text-shadow: 1.75px 1.5px $red;
 }
 
