--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,11 +24,8 @@ body html {
     width: 100%;
     padding: 5px;
     margin: auto;
-}
-
-.hero-image {
     background-image: url(images/chips.jpg);
-    height: 475px;
+    height: 565px;
     width: 100%;
     margin: auto;
     background-position: fixed;
@@ -50,6 +47,7 @@ body html {
     font-size: 65px;
     font-weight: normal;
     margin: auto;
+    margin-top: 5%;
     font-family: $header-font;
 }
 
