--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,9 +1,10 @@
 //colors
-$blue: #3772FF;
-$yelow: #FDCA40;
-$red: #DF2935;
+$blue: #3E78B2;
+$navBlue: #004BA8;
+$yellow: #D4B483;
+$red: #C1666B;
 $black: #080708;
-$white: #FFF;
+$white: #E4DFDA;
 $grey: #808080;
 $flatBlack: #1D1E18;
 
